[project]
name = "picture-book"
version = "0.1.0"
description = ""
authors = [
    {name = "lee_junho",email = "lee_junho@cyberagent.co.jp"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow",
    "torch",
    "numpy",
    "transformers",
    "torch",
    "tqdm",
    "janus @ git+https://github.com/deepseek-ai/Janus.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}